p2/confs/app2.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app2

spec:
  replicas: 3

  selector:
    matchLabels:
      app: app2

  template:
    metadata:
      labels:
        app: app2

    spec:
      containers:
        - name: app2
          image: nginx:alpine
          ports:
            - containerPort: 80
          volumeMounts:
            - name: html
              mountPath: /usr/share/nginx/html
      volumes:
        - name: html
          configMap:
            name: app2-html

---

apiVersion: v1
kind: Service

metadata:
  name: app2-service

spec:
  selector:
    app: app2

  ports:
    - port: 80
      targetPort: 80
