p2/confs/app3.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app3

spec:
  replicas: 1

  selector:
    matchLabels:
      app: app3

  template:
    metadata:
      labels:
        app: app3

    spec:
      containers:
        - name: app3
          image: nginx:alpine
          ports:
            - containerPort: 80
          volumeMounts:
            - name: html
              mountPath: /usr/share/nginx/html
      volumes:
        - name: html
          configMap:
            name: app3-html 
---

apiVersion: v1
kind: Service

metadata:
  name: app3-service

spec:
  selector:
    app: app3

  ports:
    - port: 80
      targetPort: 80
